--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./17/index.html>RUN ID: 17 - 2022-07-19 08:45:39 UTC(Latest)</a><br>
+├── <a href=./18/index.html>RUN ID: 18 - 2022-07-19 08:50:18 UTC(Latest)</a><br>
+├── <a href=./17/>RUN ID: 17 -   </a><br>
 ├── <a href=./src/>RUN ID: src -   </a><br>
 ├── <a href=./gradle/>RUN ID: gradle -   </a><br>
+├── <a href=.//>RUN ID:  -   </a><br>
 </html>
