deploy: 2ab0fc21bdc862672e2872f9d571b5aa83abb500

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./18/index.html>RUN ID: 18 - 2022-07-19 08:50:18 UTC(Latest)</a><br>
+├── <a href=./19/index.html>RUN ID: 19 - 2022-07-19 08:55:05 UTC(Latest)</a><br>
+├── <a href=./18/>RUN ID: 18 -   </a><br>
 ├── <a href=./17/>RUN ID: 17 -   </a><br>
 ├── <a href=./src/>RUN ID: src -   </a><br>
 ├── <a href=./gradle/>RUN ID: gradle -   </a><br>
