--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./19/index.html>RUN ID: 19 - 2022-07-19 08:55:05 UTC(Latest)</a><br>
+├── <a href=./20/index.html>RUN ID: 20 - 2022-07-19 09:17:01 UTC(Latest)</a><br>
+├── <a href=./19/>RUN ID: 19 -   </a><br>
 ├── <a href=./18/>RUN ID: 18 -   </a><br>
 ├── <a href=./17/>RUN ID: 17 -   </a><br>
 ├── <a href=./src/>RUN ID: src -   </a><br>
