--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./21/index.html>RUN ID: 21 - 2022-07-19 13:18:27 UTC(Latest)</a><br>
+├── <a href=./22/index.html>RUN ID: 22 - 2022-07-21 16:26:21 UTC(Latest)</a><br>
+├── <a href=./21/>RUN ID: 21 -   </a><br>
 ├── <a href=./20/>RUN ID: 20 -   </a><br>
 ├── <a href=./19/>RUN ID: 19 -   </a><br>
 ├── <a href=./18/>RUN ID: 18 -   </a><br>
