--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./25/index.html>RUN ID: 25 - 2022-07-22 12:37:45 UTC(Latest)</a><br>
+├── <a href=./26/index.html>RUN ID: 26 - 2022-07-22 12:40:09 UTC(Latest)</a><br>
+├── <a href=./25/>RUN ID: 25 -   </a><br>
 ├── <a href=./24/>RUN ID: 24 -   </a><br>
 ├── <a href=./23/>RUN ID: 23 -   </a><br>
 ├── <a href=./22/>RUN ID: 22 -   </a><br>
