--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./27/index.html>RUN ID: 27 - 2022-07-22 12:40:22 UTC(Latest)</a><br>
+├── <a href=./28/index.html>RUN ID: 28 - 2022-07-25 12:04:34 UTC(Latest)</a><br>
+├── <a href=./27/>RUN ID: 27 -   </a><br>
 ├── <a href=./26/>RUN ID: 26 -   </a><br>
 ├── <a href=./25/>RUN ID: 25 -   </a><br>
 ├── <a href=./24/>RUN ID: 24 -   </a><br>
