deploy: 47724fadf51c80e04f9bb940df6fa2700c663408

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./30/index.html>RUN ID: 30 - 2022-07-26 13:11:33 UTC(Latest)</a><br>
+├── <a href=./31/index.html>RUN ID: 31 - 2022-07-26 13:14:45 UTC(Latest)</a><br>
+├── <a href=./30/>RUN ID: 30 -   </a><br>
 ├── <a href=./29/>RUN ID: 29 -   </a><br>
 ├── <a href=./28/>RUN ID: 28 -   </a><br>
 ├── <a href=./27/>RUN ID: 27 -   </a><br>
@@ -42,5 +43,4 @@
 ├── <a href=./17/>RUN ID: 17 -   </a><br>
 ├── <a href=./src/>RUN ID: src -   </a><br>
 ├── <a href=./gradle/>RUN ID: gradle -   </a><br>
-├── <a href=.//>RUN ID:  -   </a><br>
 </html>
