--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./31/index.html>RUN ID: 31 - 2022-07-26 13:14:45 UTC(Latest)</a><br>
+├── <a href=./32/index.html>RUN ID: 32 - 2022-07-26 13:16:21 UTC(Latest)</a><br>
+├── <a href=./31/>RUN ID: 31 -   </a><br>
 ├── <a href=./30/>RUN ID: 30 -   </a><br>
 ├── <a href=./29/>RUN ID: 29 -   </a><br>
 ├── <a href=./28/>RUN ID: 28 -   </a><br>
