--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./34/index.html>RUN ID: 34 - 2022-07-26 13:21:13 UTC(Latest)</a><br>
+├── <a href=./35/index.html>RUN ID: 35 - 2022-07-26 13:21:30 UTC(Latest)</a><br>
+├── <a href=./34/>RUN ID: 34 -   </a><br>
 ├── <a href=./33/>RUN ID: 33 -   </a><br>
 ├── <a href=./32/>RUN ID: 32 -   </a><br>
 ├── <a href=./31/>RUN ID: 31 -   </a><br>
