--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<h1>Test Results</h1><p>
 	<a href=".">.</a><br>
 
-├── <a href=./35/index.html>RUN ID: 35 - 2022-07-26 13:21:30 UTC(Latest)</a><br>
+├── <a href=./36/index.html>RUN ID: 36 - 2022-07-26 13:22:11 UTC(Latest)</a><br>
+├── <a href=./35/>RUN ID: 35 -   </a><br>
 ├── <a href=./34/>RUN ID: 34 -   </a><br>
 ├── <a href=./33/>RUN ID: 33 -   </a><br>
 ├── <a href=./32/>RUN ID: 32 -   </a><br>
@@ -45,5 +46,4 @@
 ├── <a href=./19/>RUN ID: 19 -   </a><br>
 ├── <a href=./18/>RUN ID: 18 -   </a><br>
 ├── <a href=./17/>RUN ID: 17 -   </a><br>
-├── <a href=./src/>RUN ID: src -   </a><br>
 </html>
